--- a/hotdog-ufos.html
+++ b/hotdog-ufos.html
@@ -12,13 +12,13 @@
     <div class="container">
        
         <h2>Tintas e Numerações dos Anilox</h2>
-        <ul>
-            <li>Amarelo/140</li>
-            <li>Azul Real/120</li>
-            <li>Magenta/140</li>
-            <li>Azul Cromia/GTT 380</li>
-            <li>Branco/140</li>
-            <li>Preto/220</li>
+        <ul style="--length: 5" role="list">
+            <li style="--i: 1">Amarelo/140</li>
+            <li style="--i: 2">Azul Real/120</li>
+            <li style="--i: 3">Magenta/140</li>
+            <li style="--i: 4">Azul Cromia/GTT 380</li>
+            <li style="--i: 5">Branco/140</li>
+            <li style="--i: 6">Preto/220</li>
         </ul>
     </div>
     
